--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,10 @@
     "env": {
       "browser": true,
       "es2021": true,
-      "jest": true
+      "jest": true,
+      "node": true,
+      "commonjs": true
     },
-    // "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:react-hooks/recommended"],
     "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended", "plugin:react-hooks/recommended"],
     "parserOptions": {
       "ecmaVersion": 12,
@@ -13,7 +14,7 @@
         "jsx": true
       }
     },
-    "plugins": ["react", "react-hooks"],
+    "plugins": ["react", "react-hooks", "@typescript-eslint", "import"],
     "rules": {
         "react/no-unescaped-entities": "off",
         "@next/next/no-page-custom-font": "off",
